# data-exploration

./: README.md  pyproject.toml
schema/: promotion.json  quote_ced.json
src/promotion/autogen/: llm_util.py  planning_agent.py  streamlit_app.py
src/promotion/autogen/v1/: analyzer.py  database_agent.py  planning_agent.py  prompt.py  snowflake_util.py  writer_agent.py
src/promotion/autogen/v2/: analyzer.py  database_agent.py  planning_agent.py  prompt.py  sql_judge_agent.py  streamlit_app.py  writer_agent.py
src/promotion/autogen/v3/: analyzer.py  database_agent.py  llm_util.py  planning_agent.py  sql_judge_agent.py  writer_agent.py
src/promotion/langchain/: analyzer.py  bedrock_llm_util.py  custom_langchain_bedrock.py  llm_util.py  prompt.py  schema_loader.py  snowflake_util.py
