[project]
name = "data-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext[azure,openai]>=0.7.4",
    "azure-identity>=1.25.0",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "htbuilder>=0.9.0",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "panda>=0.3.1",
    "pandas>=2.3.2",
    "pylint>=3.3.8",
    "snowflake-sqlalchemy>=1.7.7",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "tabulate>=0.9.0",
]
